# finnewsactual1

./: .gitignore  CLAUDE.md  README.md  dev.ps1  start.ps1
backend/: Dockerfile  _llm_debug.json  alembic.ini  env.example  finnews.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260308_01_create_users_and_user_preferences.py  20260315_02_create_threads.py  20260325_03_add_usage_log.py  20260327_04_add_market_tickers.py  20260328_05_create_youtube_tables.py  20260328_06_add_sources_trust_level.py  20260328_07_add_custom_sources.py  20260404_07_create_earnings_events.py  20260404_09_create_pregenerated_briefs.py
backend/scripts/: run_dev.ps1  test_factual_brief.py
backend/src/finnews/: errors.py  main.py  scheduler.py  security.py  settings.py  trusted_sources.py
backend/src/finnews/api/: responses.py  routes.py  routes_auth.py  routes_earnings.py  routes_market.py  routes_profile.py  routes_research.py  routes_threads.py  routes_youtube.py  schemas.py
backend/src/finnews/clients/: axesso.py  bing_search.py  earnings.py  llm.py  market.py  scraper.py  serper.py  twitter.py  youtube.py
backend/src/finnews/db/: __init__.py  dependencies.py  session.py
backend/src/finnews/middleware/: usage_limits.py
backend/src/finnews/models/: __init__.py  earnings_event.py  thread.py  (+6 more)
backend/src/finnews_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth_service.py  test_axesso_client.py  test_brief_pipeline.py  test_brief_quality.py  test_db_session.py  test_news_list_service.py  test_normalizers.py
(+97 files in other folders)
