[project]
name = "finnews-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "python-jose[cryptography]>=3.3.0",
  "email-validator>=2.2.0",
  "httpx>=0.27",
  "cachetools>=5.3",
  "openai>=1.40.0",
  "beautifulsoup4>=4.12",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
]
